--- a/Workshop1/Web.config
+++ b/Workshop1/Web.config
@@ -39,4 +39,8 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <!--Fix WebForms UnobtrusiveValidationMode -->
+  <appSettings>
+    <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
+  </appSettings>
 </configuration>
