--- a/WebService_JSON/packages.config
+++ b/WebService_JSON/packages.config
@@ -3,4 +3,5 @@
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.8" targetFramework="net461" />
   <package id="Microsoft.Net.Compilers" version="2.6.1" targetFramework="net461" developmentDependency="true" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
 </packages>
