--- a/Workshop1/Web.config
+++ b/Workshop1/Web.config
@@ -9,6 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <system.web>
+    <authentication mode="Forms" />
     <compilation debug="true" targetFramework="4.6.1">
       <assemblies>
         <add assembly="System.Security, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A" />
@@ -43,4 +44,12 @@
   <appSettings>
     <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
   </appSettings>
+  <!--Prevent anonymous login to Default-->
+  <location path="Default.aspx">
+    <system.web>
+      <authorization>
+        <deny users="?" />
+      </authorization>
+    </system.web>
+  </location>
 </configuration>
